# Hand-Text-Recognition

./: .gitignore  LICENSE  README.md  main.py  mlflow.db  pyproject.toml
configs/: eval_crnn_ctc.yaml  eval_hybrid_ctc.yaml  eval_trocr.yaml  eval_vt_ctc.yaml  infer_crnn_ctc.yaml  infer_hybrid_ctc.yaml  infer_trocr.yaml  infer_vt_ctc.yaml  inspect_augmentations.yaml  inspect_data.yaml  make_manifest.yaml  make_splits.yaml  train_crnn_ctc.yaml  train_hybrid_ctc.yaml  train_trocr.yaml  train_vt_ctc.yaml
configs/augment/: off.yaml  paper.yaml
configs/data/: iam.yaml
configs/decode/: beam.yaml  greedy.yaml
configs/loader/: default.yaml  eval_ctc.yaml  train_ctc.yaml
configs/mlflow/: local.yaml
configs/model/: crnn_ctc.yaml  trocr.yaml  vt_ctc.yaml
configs/preprocess/: default.yaml
configs/span_mask/: vt.yaml
configs/split/: form.yaml  writer.yaml
configs/train/: ctc_default.yaml  hybrid_default.yaml  trocr_default.yaml  vt_default.yaml
scripts/: existence.py  interception.py
src/htr_ocr/: cli.py  config_loader.py
src/htr_ocr/data/: augmentations.py  collate.py  dataset.py  iam.py  samplers.py  splits.py  transforms.py  trocr_dataset.py
src/htr_ocr/models/: __init__.py  crnn_ctc.py  vt_ctc.py
src/htr_ocr/text/: __init__.py  ctc_decode.py  ctc_tokenizer.py
src/htr_ocr/train/: __init__.py  ctc_infer.py  ctc_trainer.py  hybrid_infer.py  hybrid_trainer.py  trocr_common.py  trocr_infer.py  trocr_trainer.py  vt_infer.py  vt_trainer.py
src/htr_ocr/utils/: io.py  metrics.py  mlflow_utils.py  repro.py
